tests/ui/rustdoc/deny-invalid-doc-attrs.stderr
error: unknown `doc` attribute `x`
  --> $DIR/deny-invalid-doc-attrs.rs:3:8
   |
LL | #![doc(x)]
   |        ^
   |
note: the lint level is defined here
  --> $DIR/deny-invalid-doc-attrs.rs:1:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

